# foncier_api

./: .dockerignore  .gitignore  Dockerfile  README.md  custom_exception.py  dependencies.py  docker-compose.yaml  main.py  models.py  publisher.py  pyproject.toml  tasks.py  testCreateDb.py  test_server.py
.app_foncier/: pyvenv.cfg
dto/: data.py  database.py  notifications.py  process.py  users.py
models/: data.py  notification.py  users.py
models_temp/: data.py  process.py
routers/: auth.py  data.py  notifications.py  orchestrate.py  process.py  users.py
schema/: auth.py  data.py  notifications.py  process.py  users.py
services/: auth.py  data.py  geoprocessing.py  notifications.py  orchestration.py  process.py  user.py
tests/: test_main.py
tests/routers/: test_users.py
util/: layers.py
