[project]
name = "cartofoncier"
dynamic = ["version", "dependencies", "requires-python"] 
description = "API de l'app fonciere"
authors = [{name = "Remi Bhagalou", email = "remi.bha@gmail.com"}]
readme = "README.md"
license = "MIT"


[tool.poetry]
version = "0.1.0"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.6"
geopandas = "^1.0.1"
pandas = "^2.2.3"
requests = "^2.32.3"
uvicorn = "^0.32.1"
sqlalchemy = "^2.0.36"
ogr = "^0.50.2"
osr = "^0.0.1"
gdal = "3.6.2"
psycopg2-binary = "^2.9.10"
geoalchemy2 = "^0.16.0"
celery = "^5.4.0"
pydantic = {extras = ["email"], version = "^2.10.3"}
pyjwt = "^2.10.1"
bcrypt = "^4.2.1"
python-dotenv = "^1.0.1"
python-multipart = "^0.0.20"
pydantic-settings = "^2.7.0"
alembic = "^1.14.0"
websockets = "^14.1"
cffi = "^2.0.0"
httpx = "^0.28.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"