[project]
name = "cartofoncier"
version = "0.1.0"
description = "API de l'app fonciere"
authors = [{name = "Remi Bhagalou", email = "remi.bha@gmail.com"}]
readme = "README.md"
requires-python = ">=3.13"
# package-mode = false
dependencies = [
    "alembic>=1.16.5",
    "bcrypt>=5.0.0",
    "boto3>=1.40.49",
    "celery>=5.5.3",
    "fastapi>=0.118.2",
    "geoalchemy2>=0.18.0",
    "geopandas>=1.1.1",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.11.0",
    "pydantic[email]>=2.12.0",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "redis>=7.3.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.37.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
[tool.pytest.ini_options]
pythonpath = ["."]
addopts = [
    "--import-mode=importlib",
]



